force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/Regional_Pricing_Adjustment_Table__c.object-meta.xml
<CustomObject>
    <label>Regional Pricng Adjustment Table</label>
    <nameField>
        <label>Regional Pricing Adjustment Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regional Pricing Adjustment Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>