force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/fields/Asia_Developed__c.field-meta.xml
<CustomField>
        <fullName>Asia_Developed__c</fullName>
        <label>Asia Developed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>