force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/fields/Indirect_Channel_Emerging__c.field-meta.xml
<CustomField>
        <fullName>Indirect_Channel_Emerging__c</fullName>
        <label>Indirect Channel Emerging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>