force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/fields/MEA__c.field-meta.xml
<CustomField>
        <fullName>MEA__c</fullName>
        <label>MEA (was ME)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>