force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/fields/MEA_Emerging__c.field-meta.xml
<CustomField>
        <fullName>MEA_Emerging__c</fullName>
        <label>MEA Emerging (was Africa)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>