force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/fields/Product_Code__c.field-meta.xml
<CustomField>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>