force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/fields/Region__c.field-meta.xml
<CustomField>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Developed</fullName>
                </value>
                <value>
                    <fullName>Europe Developed</fullName>
                </value>
                <value>
                    <fullName>Americas Developed</fullName>
                </value>
                <value>
                    <fullName>Asia Emerging</fullName>
                </value>
                <value>
                    <fullName>Asia underdeveloped</fullName>
                </value>
                <value>
                    <fullName>Europe Emerging</fullName>
                </value>
                <value>
                    <fullName>MEA (was ME)</fullName>
                </value>
                <value>
                    <fullName>Americas Emerging</fullName>
                </value>
                <value>
                    <fullName>MEA Emerging (was Africa)</fullName>
                </value>
                <value>
                    <fullName>Indirect Channel Emerging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>