force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/fields/RPA_Percent__c.field-meta.xml
<CustomField>
        <fullName>RPA_Percent__c</fullName>
        <label>RPA Percent</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </CustomField>