force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/recordTypes/RPA_Entry.recordType-meta.xml
<RecordType>
        <fullName>RPA_Entry</fullName>
        <active>true</active>
        <label>RPA Entry</label>
    </RecordType>