force-app/main/default/objects/Regional_Pricing_Adjustment_Table__c/listViews/Regional_Fields_Displayed.listView-meta.xml
<ListView>
        <fullName>Regional_Fields_Displayed</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>RPA_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>Regional Fields Displayed</label>
        <language>en_US</language>
    </ListView>